--- a/transit/css/popup.css
+++ b/transit/css/popup.css
@@ -1,11 +1,30 @@
 body { margin: 2px; width: 230px; padding: 5px; }
-#source { width: 170px; }
-#search { width: 52px; }
-#result { background: #f9fff9; margin-top: 2px; color: #2B3F29; font-size: 14px; }
+
+h3 {
+  margin: -7px -7px 7px -7px;
+  padding: 3px 5px;
+  background: #6ec650;
+  color: #ecf4eb;
+  font-size: 14px;
+}
+
+#source {
+  width: 170px; 
+}
+
+#search {
+  width: 52px;
+}
+
+#result {
+  background: #efffef;
+  color: #2B3F29;
+  font-size: 14px;
+}
 
 .transit-error { 
 	background: #FFF8DC;
 	padding: 3px 5px;
 	color: #888888;
-    border: 1px solid #E0DCBF;
+  border: 1px solid #E0DCBF;
 }
