--- a/transit/css/popup.css
+++ b/transit/css/popup.css
@@ -1,30 +1,38 @@
-body { margin: 2px; width: 230px; padding: 5px; }
-
-h3 {
-  margin: -7px -7px 7px -7px;
-  padding: 3px 5px;
-  background: #6ec650;
-  color: #ecf4eb;
+body {
+  width: 200px;
+  margin: 0;
+  padding: 7px;
   font-size: 14px;
+  line-height: 20px;
+  color: #555;
 }
 
 #source {
-  width: 170px; 
+  color: #555;
+  width: 100%;
+  height: 30px;
+  margin: 0 0 10px 0;
+  padding: 2px 4px;
+  font-weight: bold;
+  border-radius: 3px;
+  box-sizing: border-box;
 }
 
-#search {
-  width: 50px;
-}
-
-#result {
+#result .success {
   background: #efffef;
   color: #2B3F29;
-  font-size: 14px;
+  margin-bottom: 10px;
+  padding: 3px 6px;
 }
 
-.transit-error { 
-	background: #FFF8DC;
-	padding: 3px 5px;
-	color: #888888;
+#result .warning {
+  background: #FFF8DC;
+  color: #888888;
   border: 1px solid #E0DCBF;
+  padding: 3px 6px; 
+}
+
+#options {
+  border-top: 1px solid #ddd;
+  padding: 4px 0;
 }
