修复鼠标移出没有还原链接的 BUG

--- a/transit/css/transit.css
+++ b/transit/css/transit.css
@@ -22,7 +22,6 @@
 }
 
 a.transit-link {
-  text-decoration: none;
+  text-decoration: none !important;
   cursor: text !important;
-  font-weight: bold;
 }
