解决点击鼠标左右会清除当前选择的问题
当点击鼠标左键时，如果没有按下 Shift
键，则不主动清除当前选择，以免破坏富文本编辑器的行为

附：修正页面翻译结果中样式冲突

--- a/transit/css/transit.css
+++ b/transit/css/transit.css
@@ -9,13 +9,13 @@
   z-index: 2147483647;
 }
 
-.success { 
+#transit-popup .success { 
   background: #336721;
   padding: 3px 6px;
   color: #EDF8ED;
 }
 
-.warning { 
+#transit-popup .warning { 
 	background: #FFF8DC;
 	padding: 3px 6px;
 	color: #888888;
