屏蔽掉推送功能
- 屏蔽掉推送的功能，以准备发布1.0版本
- 在链接划词的选项上添加说明

--- a/transit/css/popup.css
+++ b/transit/css/popup.css
@@ -44,3 +44,8 @@ body {
 #options input[type=range]::-webkit-slider-thumb {
   height: 10px;
 }
+
+.hint {
+  text-decoration: underline;
+  cursor: help;
+}
