短时间内大量查词会导致浮层显示超出视图范围 #7
之前的设计中，后面加入的结果面板根据前一个加入的位置来定位，
越往后，越靠下，而且旧的浮层消失后，较新的浮层并不会上移，这
样导致稍微多查询几个词，查询结果列表就跳到视野之外了。

改进的设计为，所以的查询结果都放入一个 ul 列表中，越晚查询的词
的面板越靠上，而且面板消失后，后面的内容会自动上移。这样，大多数
情况下，用户并不会把整个屏幕占满。

在极端情况下，只要用户不停的点击查词，依然会将结果跳出到屏幕以外，
要解决需要写比较复杂的滚动脚本，感觉没有必要，够用就好了。

结果面板距离上和右边界有5像素的距离，并加上了阴影和透明效果。
查询结果浮层的浮层也加入了滑入和滑出的动画效果。

--- a/transit/css/transit.css
+++ b/transit/css/transit.css
@@ -1,11 +1,24 @@
+#transit-notify-list {
+    background: transparent;
+    position: fixed;
+    z-index: 2147483647;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 250px;
+    right: 5px;
+    top: 5px;
+    text-align: left;
+}
+
 .transit-notify {
+    display: none;
     line-height: 1.5;
     font-size: 14px;
-    text-align: left;
-    position: fixed;
-    right: 0;
-    z-index: 2147483647;
-    width: 250px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px #000000;
+    opacity: 0.9;
 }
 
 .transit-notify h6 {
