--- a/transit/css/transit.css
+++ b/transit/css/transit.css
@@ -22,8 +22,24 @@
 }
 
 .transit-notify h6 {
-    margin: 0;
+    border: none;
+    background: none;
     font-size: 16px;
+    color: inherit;
+    margin: 0;
+    padding: 0;
+    margin: 0;
+}
+
+.transit-notify code {
+    border: none;
+    background: none;
+    margin: 0;
+    padding: 0;
+    color: inherit;
+    font-size: inherit;
+    margin-bottom: 10px;
+    font-weight: 300;
 }
 
 .transit-notify .success { 
