--- a/transit/css/transit.css
+++ b/transit/css/transit.css
@@ -1,14 +1,29 @@
 #transit-notify-list {
     background: transparent;
     position: fixed;
-    z-index: 2147483647;
-    list-style: none;
     margin: 0;
     padding: 0;
+    z-index: 2147483647;
     width: 250px;
     right: 5px;
     top: 5px;
     text-align: left;
+    overflow: auto;
+}
+
+.transit-list-inner {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.transit-list-full {
+    bottom: 5px;
+}
+
+#transit-notify-list::-webkit-scrollbar {
+    display: none;
+    width: 0px;
 }
 
 .transit-notify {
