--- a/extension/css/notify.user.css
+++ b/extension/css/notify.user.css
@@ -28,9 +28,11 @@
 
 .transit-notify {
     display: none;
+    max-width: 250px;
     line-height: 1.5;
     font-size: 14px;
     margin-bottom: 5px;
+    text-align: left;
     border-radius: 5px;
     box-shadow: 0px 0px 5px #000000;
     opacity: 0.9;
