设置页面中划词结果显示位置加上图示，更直观
图临时做的，比较丑，先代表一下就行了。

--- a/extension/css/options.css
+++ b/extension/css/options.css
@@ -42,3 +42,20 @@ input[type=range] {
    margin-top: 10px;
    margin-bottom: 0;
 }
+
+.form-group.notify-mode .radio-inline {
+  text-align: left;
+  padding-left: 0;
+}
+
+
+.form-group.notify-mode .radio-inline input[type=radio] {
+  float: none;
+  margin-left: 0px;
+  vertical-align: top;
+}
+
+
+.form-group.notify-mode .radio-inline img {
+  display: block;
+}
