--- a/extension/css/popup.css
+++ b/extension/css/popup.css
@@ -38,6 +38,7 @@ label {
   background: #FFF8DC;
   color: #888888;
   border: 1px solid #E0DCBF;
+  margin-bottom: 10px;
   padding: 3px 6px; 
 }
 
@@ -57,6 +58,10 @@ label {
 .hint {
   text-decoration: underline;
   cursor: help;
+}
+
+footer {
+  height: 16px;
 }
 
 input[type=checkbox] {
