--- a/src/stylesheets/popup.scss
+++ b/src/stylesheets/popup.scss
@@ -33,43 +33,46 @@ label {
   background-size: 50px 16px;
   background-repeat: no-repeat;
   background-position: right center;
+
+  &.youdao {
+    background-image: url(../img/translators/youdao.png);
+  }
+
+  &.baidu {
+    background-size: 50px 12px;
+    background-image: url(../img/translators/baidu.png);
+  }
 }
 
-.btn-translator.youdao {
-  background-image: url(../img/translators/youdao.png);
-}
+#result {
+  .success {
+    background: #efffef;
+    color: #2B3F29;
+    margin-bottom: 10px;
+    padding: 3px 6px;
+  }
 
-.btn-translator.baidu {
-  background-size: 50px 12px;
-  background-image: url(../img/translators/baidu.png);
-}
-
-#result .success {
-  background: #efffef;
-  color: #2B3F29;
-  margin-bottom: 10px;
-  padding: 3px 6px;
-}
-
-#result .warning {
-  background: #FFF8DC;
-  color: #888888;
-  border: 1px solid #E0DCBF;
-  margin-bottom: 10px;
-  padding: 3px 6px; 
+  .warning {
+    background: #FFF8DC;
+    color: #888888;
+    border: 1px solid #E0DCBF;
+    margin-bottom: 10px;
+    padding: 3px 6px; 
+  }
 }
 
 #options {
   border-top: 1px solid #ddd;
   padding: 4px 0;
-}
 
-#options input[type=range] {
-  height: 10px;
-  width: 40px;
-}
-#options input[type=range]::-webkit-slider-thumb {
-  height: 10px;
+  input[type=range] {
+    height: 10px;
+    width: 40px;
+  }
+
+  input[type=range]::-webkit-slider-thumb {
+    height: 10px;
+  }
 }
 
 .hint {
