查询时显示正在翻译
修正正在翻译文字的位置，不至于太靠下。

--- a/src/stylesheets/popup.scss
+++ b/src/stylesheets/popup.scss
@@ -45,6 +45,11 @@ label {
 }
 
 #result {
+  .loading {
+    margin-bottom: 10px;
+    padding: 3px 6px;
+  }
+
   .success {
     background: #efffef;
     color: #2B3F29;
@@ -55,7 +60,6 @@ label {
   .warning {
     background: #FFF8DC;
     color: #888888;
-    border: 1px solid #E0DCBF;
     margin-bottom: 10px;
     padding: 3px 6px; 
   }
