--- a/src/stylesheets/popup.scss
+++ b/src/stylesheets/popup.scss
@@ -7,6 +7,10 @@ body {
   color: #555;
 }
 
+.ng-hide {
+  display: none !important;
+}
+
 .pull-right {
   float: right;
 }
@@ -16,14 +20,24 @@ label {
 }
 
 #source {
+  -webkit-appearance: textfield;
+  border: 1px inset #e0e0e0;
+  background-color: #fefbf5;
+  resize: none;
+  font-size: 14px;
+  line-height: 20px;
   color: #555;
   width: 100%;
-  height: 30px;
-  margin: 0 0 10px 0;
+  height: 20px;
+  max-height: 80px;
+  margin: 0 0 2px 0;
   padding: 2px 4px;
   font-weight: bold;
-  border-radius: 3px;
   box-sizing: border-box;
+
+  &:active, &:focus {
+    outline: -webkit-focus-ring-color auto 3px;
+  }
 }
 
 .btn-translator {
@@ -45,43 +59,20 @@ label {
 }
 
 #result {
-  .loading {
-    margin-bottom: 10px;
+  div {
+    margin-bottom: 7px;
     padding: 3px 6px;
   }
 
   .success {
     background: #efffef;
     color: #2B3F29;
-    margin-bottom: 10px;
-    padding: 3px 6px;
   }
 
   .warning {
     background: #FFF8DC;
     color: #888888;
-    margin-bottom: 10px;
-    padding: 3px 6px; 
   }
-}
-
-#options {
-  border-top: 1px solid #ddd;
-  padding: 4px 0;
-
-  input[type=range] {
-    height: 10px;
-    width: 40px;
-  }
-
-  input[type=range]::-webkit-slider-thumb {
-    height: 10px;
-  }
-}
-
-.hint {
-  text-decoration: underline;
-  cursor: help;
 }
 
 footer {
