翻译结果的最高高度设置为 200
该区域会自动滚动

--- a/src/stylesheets/popup.scss
+++ b/src/stylesheets/popup.scss
@@ -59,7 +59,11 @@ label {
 }
 
 #result {
+
   div {
+    max-height: 200px;
+    overflow: auto;
+    
     margin-bottom: 7px;
     padding: 3px 6px;
   }
