--- a/src/stylesheets/popup.scss
+++ b/src/stylesheets/popup.scss
@@ -8,7 +8,10 @@ body {
 }
 
 .ng-hide {
-  display: none !important;
+  display: block!important;
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
 }
 
 .pull-right {
@@ -63,7 +66,6 @@ label {
   div {
     max-height: 200px;
     overflow: auto;
-    
     margin-bottom: 7px;
     padding: 3px 6px;
   }
