简单的导航

--- a/site/source/layouts/layout.erb
+++ b/site/source/layouts/layout.erb
@@ -7,13 +7,17 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "The Middleman" %></title>
+    <title><%= current_page.data.title || "TranIt" %></title>
     
-    <%= stylesheet_link_tag "normalize", "all" %>
-    <%= javascript_include_tag  "all" %>
+    <%= stylesheet_link_tag "all" %>
   </head>
   
   <body class="<%= page_classes %>">
-    <%= yield %>
+    <div class="container">
+      <%= render_partial 'header' %>
+      <%= yield %>
+    </div>
+
+    <%= javascript_include_tag  "all" %>
   </body>
 </html>
