--- a/site/source/stylesheets/layout.css.scss
+++ b/site/source/stylesheets/layout.css.scss
@@ -1,8 +1,40 @@
 body {
   padding-top: 20px;
+  padding-bottom: 20px;
+  color: #555555;
 }
 
-.navbar .nav li {
-  margin-left: 10px;
-  font-weight: bold;
+.navbar {
+  margin-bottom: 0;
+
+  .nav li {
+    margin-left: 10px;
+    font-weight: bold;
+  }
+}
+
+#splash {
+  
+  h1 {
+    font-size: 30px;
+    line-height: 40px;
+    height: 40px;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+
+  #screenshots {
+    margin-bottom: 20px;
+
+    .item img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .btn-lg {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
