--- a/site/source/_header.html.erb
+++ b/site/source/_header.html.erb
@@ -3,6 +3,6 @@
     <li role="presentation"><a href="https://github.com/GDG-Xian/crx-transit">项目主页</a></li>
     <li role="presentation"><a href="https://github.com/GDG-Xian/crx-transit/blob/master/CHANGELOG.md">更新历史</a></li>
     <li role="presentation"><a href="https://github.com/GDG-Xian/crx-transit/issues">问题反馈</a></li>
-    <li role="presentation" class="active"><a href="#">插件介绍</a></li>
+    <li role="presentation" class="active"><a href="#screenshots">插件介绍</a></li>
   </ul>
 </nav>
