设置简单的 feature 样式
参照 gitsublime 的 features

--- a/site/source/layouts/layout.erb
+++ b/site/source/layouts/layout.erb
@@ -11,10 +11,9 @@
   </head>
   
   <body class="<%= page_classes %>">
-    <div class="container">
-      <%= render_partial 'header' %>
-      <%= yield %>
-    </div>
+    <%= partial 'header' %>
+    
+    <%= yield %>
 
     <%= javascript_include_tag  "all" %>
   </body>
