添加部分 feature 的图片和说明。

--- a/site/source/_feature.html.erb
+++ b/site/source/_feature.html.erb
@@ -1,11 +1,7 @@
-<div class="col-md-6">
-  <div class="feature row">
-    <div class="col-xs-4">
-      <img src="<%= feature.picture %>" />
-    </div>
-    <div class="col-xs-8">
-      <h4><%= feature.title %></h4>
-      <p><%= feature.content %></p>
-    </div>
+<div class="col-md-4">
+  <div class="feature">
+    <img src="<%= feature.picture %>" />
+    <h4><%= feature.title %></h4>
+    <p><%= feature.content %></p>
   </div>
 </div>
