实现特性章节的瀑布流效果

--- a/site/source/_feature.html.erb
+++ b/site/source/_feature.html.erb
@@ -1,7 +1,9 @@
 <div class="col-md-4">
   <div class="feature">
     <img src="<%= feature.picture %>" />
-    <h4><%= feature.title %></h4>
-    <p><%= feature.content %></p>
+    <div class="content">
+      <h4><%= feature.title %></h4>
+      <p><%= feature.content %></p>
+    </div>
   </div>
 </div>
