--- a/site/source/_features.html.erb
+++ b/site/source/_features.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
-        <div class="row">
+        <div class="row list">
           <% data.features.each do |feature| %>
             <%= partial 'feature', locals: { feature: feature } %>
           <% end %>
