--- a/site/source/stylesheets/layout.css.scss
+++ b/site/source/stylesheets/layout.css.scss
@@ -49,16 +49,30 @@ section {
 }
 
 #features {
+  .list {
+    position: relative;
+  }
+
   .feature {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    border: 3px solid #d0d9dc;
+    padding: 8px;
+    background-color: #e1e7e9;
+    margin-bottom: 10px;
 
     img {
-      border: 1px solid #dbdfe0;
       height: auto;
       max-width: 100%;
       vertical-align: middle;
       border: 0;
+    }
+
+    .content {
+      margin: 8px -8px -8px -8px;
+      padding: 8px;
+      background-color: #f3f5f6;
+
+      h4 { margin-top: 0; }
+      p { margin-bottom: 0; }
     }
   }
 }
