--- a/src/css/contentstyle.scss
+++ b/src/css/contentstyle.scss
@@ -1,83 +1,48 @@
 #transit-notify-list {
-    background: transparent;
-    position: fixed;
-    margin: 0;
-    padding: 0;
-    z-index: 2147483647;
-    width: 250px;
-    right: 5px;
-    top: 35px;
-    text-align: left;
-    overflow: auto;
-}
+  background: transparent;
+  position: fixed;
+  margin: 0;
+  padding: 0;
+  z-index: 2147483647;
+  width: 250px;
+  right: 5px;
+  top: 35px;
+  text-align: left;
+  overflow: auto;
+  max-height: calc(100% - 40px);
 
-.transit-list-inner {
+  &::-webkit-scrollbar {
+    display: none;
+    width: 0px;
+  }
+
+  .transit-list-inner {
     list-style: none;
     margin: 0;
     padding: 0;
+  }
 }
 
 .transit-list-full {
-    bottom: 5px;
-}
-
-#transit-notify-list::-webkit-scrollbar {
-    display: none;
-    width: 0px;
+  bottom: 5px;
 }
 
 .transit-notify {
-    display: none;
-    z-index: 2147483647;
-    max-width: 250px;
-    line-height: 1.5;
-    font-size: 14px;
-    margin-bottom: 5px;
-    text-align: left;
-    border-radius: 5px;
-    box-shadow: 0px 0px 5px #000000;
-    opacity: 0.9;
+  z-index: 2147483647;
+  max-width: 250px;
+  line-height: 1.5;
+  font-size: 14px;
+  margin-bottom: 5px;
+  text-align: left;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px #000000;
+  opacity: 0.9;
 
-    h6 {
-        border: none !important;
-        background: none !important;
-        font-size: 16px !important;
-        line-height: 20px !important;
-        color: inherit !important;
-        padding: 0 !important;
-        margin: 0 !important;
-        text-transform: none !important;
-    }
-
-    code {
-        border: none;
-        background: none;
-        margin: 0;
-        padding: 0;
-        color: inherit;
-        font-size: inherit;
-        margin-bottom: 10px;
-        font-weight: 300;
-    }
-
-    .success {
-        background: #336721;
-        padding: 3px 6px;
-        margin: 0;
-        color: #EDF8ED;
-    }
-
-    .warning {
-        background: #FFF8DC;
-        padding: 3px 6px;
-        margin: 0;
-        color: #888888;
-    }
+  @import 'includes/_transit_result';
 }
 
-
-body.transit-link-inspect-mode a {
-    text-decoration: none !important;
-    cursor: text !important;
-    pointer-events: none !important;
+.transit-link-inspect-mode a {
+  text-decoration: none !important;
+  cursor: text !important;
+  pointer-events: none !important;
 }
