--- a/src/css/includes/_transit_result.scss
+++ b/src/css/includes/_transit_result.scss
@@ -13,31 +13,21 @@
     color: #888888;
   }
 
-  h6 {
+  h6, code, pre {
     border: none;
     background: none;
-    font-size: 16px;
-    line-height: 20px;
     color: inherit;
     padding: 0;
     margin: 0;
     text-transform: none;
+    font-size: 14px;
+    line-height: 20px;
+    white-space: normal;
   }
 
-  code {
-    border: none;
-    background: none;
-    margin: 0;
-    padding: 0;
-    color: inherit;
-    font-size: inherit;
-    margin-bottom: 10px;
-    font-weight: 300;
-  }
-
-  pre {
-    background: transparent;
-    margin-top: 0;
-    margin-bottom: 0;
+  h6 {
+    font-size: 16px;
+    margin-bottom: 5px;
+    font-weight: 600;
   }
 }
