don't reset children elements style for link-inspect-mode
elements under class '*trans-*' will be reset by the following rules.

	[class*='transit-'], [class*='transit-'] *

This will break the style in some webpages,
because `transit-link-inspect-mode` will be append on body element
when double type `capslock`, to avoid this, I rename
`transit-link-inspect-mode` to `translt-link-inspect-mode`.

This fixed issue #56

--- a/src/css/contentstyle.scss
+++ b/src/css/contentstyle.scss
@@ -65,7 +65,8 @@ a.transit-notify-close {
   @include link-colors(#aaa, #999, #999, #aaa);
 }
 
-.transit-link-inspect-mode a {
+// typo `translt` to ignore style reset.
+.translt-link-inspect-mode a {
   text-decoration: none !important;
   cursor: text !important;
   pointer-events: none !important;
