--- a/src/css/contentstyle.scss
+++ b/src/css/contentstyle.scss
@@ -46,6 +46,7 @@
 .transit-notify {
   z-index: 2147483647;
   max-width: 250px;
+  min-width: 150px;
   line-height: 1.5;
   font-size: 14px;
   margin-bottom: 5px;
