连接mdict，进行sanskrit翻译，还有bug

--- a/src/css/popup.scss
+++ b/src/css/popup.scss
@@ -62,6 +62,10 @@ body {
   &.bing {
     background-image: url(../img/translators/bing.png);
   }
+
+  &.sanskrit {
+    background-image: url(../img/translators/sanskrit.png);
+  }
 }
 
 .transit-result {
