将mdict和transit联系起来进行查询

--- a/src/css/includes/_transit_result.scss
+++ b/src/css/includes/_transit_result.scss
@@ -1,9 +1,9 @@
 .transit-result {
   &.transit-success {
-    background: #336721;
+    background: #FFFFFF;
     padding: 3px 6px;
     margin: 0;
-    color: #EDF8ED;
+    color: #000000;
   }
 
   &.transit-warning {
